feat: playlist functionality added
