# backend/src/messages/RequestPlaylistGetUser.ts
@@ -1,8 +1,6 @@
-export interface RequestPlaylistCreate {
+export interface RequestPlaylistGetUser {
 	session_hash: string;
 	user_uuid: string;
 	request_hash: string;
 	timestamp: number;
-	title: string;
-	description: string;
 }
