# backend/src/messages/RequestUserGetUsername.ts
@@ -1,4 +1,5 @@
-export interface RequestPlaylistGetAll {
+export interface RequestUserGetUsername {
+	requested_user_uuid: string
 	session_hash: string;
 	user_uuid: string;
 	request_hash: string;
