# backend/src/messages/ResponsePlaylistDelete.ts
@@ -1,5 +1,5 @@
-export interface ResponseUserRegister {
-	user_uuid: string;
+export interface ResponsePlaylistDelete {
+	playlist_id: number;
 	is_success: boolean;
 	error_code: number;
 	error_msg: string;
