# backend/src/messages/ResponseUserGetUsername.ts
@@ -1,5 +1,5 @@
-export interface ResponsePlaylistCreate {
-	playlist_id: number;
+export interface ResponseUserGetUsername {
+	username: string;
 	is_success: boolean;
 	error_code: number;
 	error_msg: string;
